packliste zeug und crate qr scanner, queries zeug, api nach #16 modifizieren (closes #16)
