# src/main/java/de/entropia/logistiktracking/web/EuroCrateRoute.java
@@ -49,11 +49,11 @@ public class EuroCrateRoute implements EuroCrateApi {
 	}
 
 	@Override
-	public ResponseEntity<EuroCrateDto> modifyDeliveryStateOfCrate(OperationCenterDto operationCenterDto, String euroCrateName, DeliveryStateDto deliveryStateDto) {
-		Result<EuroCrateDto, EuroCrateUseCase.ModifyCrateError> result = euroCrateUseCase.modifyEuroCrate(operationCenterDto, euroCrateName, deliveryStateDto);
+	public ResponseEntity<Void> modifyDeliveryStateOfCrate(OperationCenterDto operationCenterDto, String euroCrateName, DeliveryStateDto deliveryStateDto) {
+		Result<Void, EuroCrateUseCase.ModifyCrateError> result = euroCrateUseCase.setEuroCrateLocation(operationCenterDto, euroCrateName, deliveryStateDto);
 		return switch (result) {
-			case Result.Ok<EuroCrateDto, EuroCrateUseCase.ModifyCrateError> ok -> ResponseEntity.ok(ok.result());
-			case Result.Error<EuroCrateDto, EuroCrateUseCase.ModifyCrateError> error -> switch (error.error()) {
+			case Result.Ok<Void, EuroCrateUseCase.ModifyCrateError> _ -> ResponseEntity.ok().build();
+			case Result.Error<Void, EuroCrateUseCase.ModifyCrateError>(var err) -> switch (err) {
 				case BadArguments -> ResponseEntity.badRequest().build();
 				case CrateNotFound -> ResponseEntity.notFound().build();
 			};
@@ -61,11 +61,11 @@ public class EuroCrateRoute implements EuroCrateApi {
 	}
 
 	@Override
-	public ResponseEntity<EuroCrateDto> modifyInformationOfCrate(OperationCenterDto operationCenterDto, String euroCrateName, InformationDto informationDto) {
-		Result<EuroCrateDto, EuroCrateUseCase.ModifyCrateError> result = euroCrateUseCase.modifyEuroCrate(operationCenterDto, euroCrateName, informationDto);
+	public ResponseEntity<Void> modifyInformationOfCrate(OperationCenterDto operationCenterDto, String euroCrateName, InformationDto informationDto) {
+		Result<Void, EuroCrateUseCase.ModifyCrateError> result = euroCrateUseCase.setEuroCrateInformation(operationCenterDto, euroCrateName, informationDto);
 		return switch (result) {
-			case Result.Ok<EuroCrateDto, EuroCrateUseCase.ModifyCrateError> ok -> ResponseEntity.ok(ok.result());
-			case Result.Error<EuroCrateDto, EuroCrateUseCase.ModifyCrateError> error -> switch (error.error()) {
+			case Result.Ok<Void, EuroCrateUseCase.ModifyCrateError> _ -> ResponseEntity.ok().build();
+			case Result.Error<Void, EuroCrateUseCase.ModifyCrateError>(var err) -> switch (err) {
 				case BadArguments -> ResponseEntity.badRequest().build();
 				case CrateNotFound -> ResponseEntity.notFound().build();
 			};
@@ -73,14 +73,23 @@ public class EuroCrateRoute implements EuroCrateApi {
 	}
 
 	@Override
-	public ResponseEntity<EuroCrateDto> modifyLocationOfCrate(OperationCenterDto operationCenterDto, String euroCrateName, LocationDto locationDto) {
-		Result<EuroCrateDto, EuroCrateUseCase.ModifyCrateError> result = euroCrateUseCase.modifyEuroCrate(operationCenterDto, euroCrateName, locationDto);
+	public ResponseEntity<Void> modifyLocationOfCrate(OperationCenterDto operationCenterDto, String euroCrateName, LocationDto locationDto) {
+		Result<Void, EuroCrateUseCase.ModifyCrateError> result = euroCrateUseCase.setEuroCrateLocation(operationCenterDto, euroCrateName, locationDto);
 		return switch (result) {
-			case Result.Ok<EuroCrateDto, EuroCrateUseCase.ModifyCrateError> ok -> ResponseEntity.ok(ok.result());
-			case Result.Error<EuroCrateDto, EuroCrateUseCase.ModifyCrateError> error -> switch (error.error()) {
+			case Result.Ok<Void, EuroCrateUseCase.ModifyCrateError> _ -> ResponseEntity.ok().build();
+			case Result.Error<Void, EuroCrateUseCase.ModifyCrateError>(var err) -> switch (err) {
 				case BadArguments -> ResponseEntity.badRequest().build();
 				case CrateNotFound -> ResponseEntity.notFound().build();
 			};
+		};
+	}
+
+	@Override
+	public ResponseEntity<BasicPackingListDto> getPackingListsOfCrate(OperationCenterDto operationCenter, String euroCrateName) {
+		Result<BasicPackingListDto, EuroCrateUseCase.FindRelatedPackingListError> packingListsOfCrate = euroCrateUseCase.getPackingListsOfCrate(operationCenter, euroCrateName);
+		return switch (packingListsOfCrate) {
+			case Result.Ok<BasicPackingListDto, ?>(var result) -> ResponseEntity.ok(result);
+			case Result.Error<?, EuroCrateUseCase.FindRelatedPackingListError>(var err) -> ResponseEntity.notFound().build();
 		};
 	}
 }
